--- a/frontend/src/Login/Login.css
+++ b/frontend/src/Login/Login.css
@@ -1,3 +1,5 @@
+
+
 @media screen and (max-width:990px){
     .login_form{
         width: 100%;
@@ -8,9 +10,14 @@
 
 
 @media screen and (min-width:990px){
+    .login-msg{
+        height: 30px;
+    }
+
     .login_form{
         width: 700px;
-        height: 50%;
+        min-height: 50%;
+        max-height: 60%;
         border: 1px solid lightgray;
         margin: 100px auto 0;
         padding: 30px;
