--- a/frontend/src/StoreProducts/StoreProducts.css
+++ b/frontend/src/StoreProducts/StoreProducts.css
@@ -1,3 +1,18 @@
+.product-list-elemnt{
+    all: unset;
+    overflow: hidden;
+    vertical-align: bottom;
+    padding: 10px 0 0;
+}
+
+
+
+.product-list-elemnt:hover:enabled{
+    background-color: lightgray;
+
+}
+
+
 
 @media screen and (max-width:990px){
     .product-list-table{
@@ -8,10 +23,7 @@
     .product-list-row{
         display: flex;
         justify-content: space-between;
-        
-        margin: 20px 0 5px;
-        padding: 0 20px;
-        border-bottom: 1px solid black;
+        border-bottom: 1px solid lightgrey;
     }
 }
 
@@ -24,10 +36,7 @@
     .product-list-row{
         display: flex;
         justify-content: space-between;
-        
-        margin: 20px 0 5px;
-        padding: 0 100px;
-        border-bottom: 1px solid black;
+        border-bottom: 1px solid lightgrey;
 
     }
 }
