--- a/frontend/src/Home/Components/ProductList.css
+++ b/frontend/src/Home/Components/ProductList.css
@@ -1,5 +1,5 @@
 .product-search{
-    border-radius: 10px;
+    border-radius: 0;
     border: 1px solid black;
 }
 
@@ -13,9 +13,14 @@
 }
 
 .product-card{
-    width: 400px;
-    margin-top: 20px;
+    width: 95%;
     border: 0.5px solid lightgray;
     padding: 10px;
+    margin: 0px 0 10px 5%;
     border-radius: 10px;
+}
+
+.search-tag-box{
+    border: 1px solid black;
+    height: fit-content;
 }
